--- a/AppLanterna/AppLanterna/App.xaml
+++ b/AppLanterna/AppLanterna/App.xaml
@@ -3,13 +3,14 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              x:Class="AppLanterna.App">
     <Application.Resources>
+        
         <ResourceDictionary>
             <Style x:Key="FonteCustumizada" TargetType="Label">
                 <Setter Property="FontFamily">
                     <Setter.Value>
                         <OnPlatform x:TypeArguments="x:String"
-                                    Android="athena_u.TTF"/>
-                     </Setter.Value>
+                                    Android="american-typewriter-bold-bt.ttf"/>
+                    </Setter.Value>
                 </Setter>
 
                 <Setter Property="HorizontalOptions" Value="Center"/>
@@ -17,24 +18,30 @@
                 <Setter Property="TextColor" Value="White"/>
             </Style>
 
-            <Style x:Key="titulo" TargetType="Label" BaseResourceKey="FonteCustumizada">
+            <Style x:Key="titulo" TargetType="Label" BaseResourceKey="FonteCustomizada">
                 <Setter Property="FontSize" Value="60"/>
             </Style>
 
-            <Style x:Key="subtitulo" TargetType="Label" BaseResourceKey="FonteCustumizada">
+            <Style x:Key="subtitulo" TargetType="Label" BaseResourceKey="FonteCustomizada">
                 <Setter Property="FontSize" Value="24"/>
             </Style>
-
-            <Style x:Key="texto" TargetType="Label" BaseResourceKey="FonteCustumizada">
+            
+            <Style x:Key="texto" TargetType="Label">
                 <Setter Property="HorizontalOptions" Value="Center"/>
                 <Setter Property="VerticalOptions" Value="Center"/>
                 <Setter Property="FontSize" Value="Medium"/>
             </Style>
+            
+          <!--usando novamente o recurso de herença, para o texto, mudando apenas a cor de exemplo -->
 
-            <Style x:Key="textocinza" TargetType="Label" BaseResourceKey="texto">
-                <Setter Property="TextColor" Value="White"/>
+            <Style x:Key="textoCinza" TargetType="Label" BaseResourceKey="texto">
+                <Setter Property="TextColor" Value="Gray"/>
             </Style>
 
+            <Style x:Key="textoBranco" TargetType="Label" BaseResourceKey="texto">
+                <Setter Property="TextColor" Value="White"/>
+            </Style>
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
